--- a/Cerulean-Bee-Flask01/templates/index.html
+++ b/Cerulean-Bee-Flask01/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="static/styles.css">
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
     <script src="https://kit.fontawesome.com/4a594eca5a.js"></script>
     <script src="scripts.js"></script>
@@ -45,4 +45,18 @@
         </ul>
     </nav> <!-- NAVIGATION BAR END-->
 
-    
+
+    <!-- CONTENT START-->
+    <div class=container>
+        <main>
+            <p1> CERULEAN BEE </br></p1>
+            <p2>CPSC531 PROJECT</br></p2>
+        </main>
+
+
+    <footer></footer>
+    </div>
+
+</body>
+
+</html>
