--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,15 @@
 
+{% include "header.html" %}
+
 <!-- CONTENT START-->
 <div class=container>
     <main>
         <p1> CERULEAN BEE </br></p1>
         <p2>CPSC531 PROJECT</br></p2>
     </main>
+</div>
+
+{% include "footer.html" %}
+
+</html>
+    
