Working on Print Order

--- a/Cerulean-Bee-01/templates/header.html
+++ b/Cerulean-Bee-01/templates/header.html
@@ -35,6 +35,9 @@
                         <li class="nav-item show">
                             <a class="nav-link" href="{{ url_for('employee_work_log_home') }}">Employee Work Logs</a>
                         </li>
+                        <li class="nav-item show">
+                            <a class="nav-link" href="{{ url_for('print_order_home') }}">Print Orders</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
