--- a/Cerulean-Bee-01/templates/index.html
+++ b/Cerulean-Bee-01/templates/index.html
@@ -4,8 +4,9 @@
 <!-- CONTENT START-->
 <div class=container>
     <main>
-        <p1> CERULEAN BEE </br></p1>
+        <p1>CERULEAN BEE</br></p1>
         <p2>CPSC531 PROJECT</br></p2>
+        <p3>Gordon Huynh and Timothy Jan</p3>
     </main>
 </div>
 
