Print Order complete

--- a/Cerulean-Bee-01/templates/add_print_order.html
+++ b/Cerulean-Bee-01/templates/add_print_order.html
@@ -41,6 +41,46 @@
         <label>Vendor</label>
         <input type="text" name="vendor"><br>
 
+        <label>X-Small Number</label>
+        <input type="number" name="x_small_number" min="0"><br>
+        <label>X-Small Add. Charge</label>
+        <input type="text" name="x_small_add_charge"><br>
+        <label>Small Number</label>
+        <input type="number" name="small_number" min="0"><br>
+        <label>Small Add. Charge</label>
+        <input type="text" name="small_add_charge"><br>
+        <label>Medium Number</label>
+        <input type="number" name="medium_number" min="0"><br>
+        <label>Medium Add. Charge</label>
+        <input type="text" name="medium_add_charge"><br>
+        <label>Large Number</label>
+        <input type="number" name="large_number" min="0"><br>
+        <label>Large Add. Charge</label>
+        <input type="text" name="large_add_charge"><br>
+        <label>X-Large Number</label>
+        <input type="number" name="x_large_number" min="0"><br>
+        <label>X-Large Add. Charge</label>
+        <input type="text" name="x_large_add_charge"><br>
+        <label>XX-Large Number</label>
+        <input type="number" name="xx_large_number" min="0"><br>
+        <label>XX_Large Add. Charge</label>
+        <input type="text" name="xx_large_add_charge"><br>
+
+        <label>Per Unit Base Price</label>
+        <input type="text" name="per_unit_base_price"><br>
+        <label>Color Charge</label>
+        <input type="text" name="color_charge"><br>
+        <label>Total Blank Price</label>
+        <input type="text" name="total_blank_price"><br>
+        <label>Location Size</label>
+        <input type="text" name="location_size"><br>
+        <label># Colors Charge</label>
+        <input type="text" name="num_colors_charge"><br>
+        <label>Color List</label>
+        <input type="text" name="color_list"><br>
+        <label>Total</label>
+        <input type="text" name="total"><br>
+
         <button type="submit">Add Print Order</button>
     </form>
 </body>
