--- a/Cerulean-Bee-01/templates/edit_print_order.html
+++ b/Cerulean-Bee-01/templates/edit_print_order.html
@@ -44,6 +44,45 @@
         <p>Vendor: {{print_order.vendor}}</p>
         <input name="vendor" type="text" value = {{print_order.vendor}}>
 
+        <p>X-Small Number: {{print_order.x_small_number}}</p>
+        <input name="x_small_number" type="number" min="0" value = {{print_order.x_small_number}}>
+        <p>X-Small Add. Charge: {{print_order.x_small_add_charge}}</p>
+        <input name="x_small_add_charge" type="text" value = {{print_order.x_small_add_charge}}>
+        <p>Small Number: {{print_order.small_number}}</p>
+        <input name="small_number" type="number" min="0" value = {{print_order.small_number}}>
+        <p>Small Add. Charge: {{print_order.small_add_charge}}</p>
+        <input name="small_add_charge" type="text" value = {{print_order.small_add_charge}}>
+        <p>Medium Number: {{print_order.medium_number}}</p>
+        <input name="medium_number" type="number" min="0" value = {{print_order.medium_number}}>
+        <p>Medium Add. Charge: {{print_order.medium_add_charge}}</p>
+        <input name="medium_add_charge" type="text" value = {{print_order.medium_add_charge}}>
+        <p>Large Number: {{print_order.large_number}}</p>
+        <input name="large_number" type="number" min="0" value = {{print_order.large_number}}>
+        <p>Large Add. Charge: {{print_order.large_add_charge}}</p>
+        <input name="large_add_charge" type="text" value = {{print_order.large_add_charge}}>
+        <p>X-Large Number: {{print_order.x_large_number}}</p>
+        <input name="x_large_number" type="number" min="0" value = {{print_order.x_large_number}}>
+        <p>X-Large Add. Charge: {{print_order.x_large_add_charge}}</p>
+        <input name="x_large_add_charge" type="text" value = {{print_order.x_large_add_charge}}>
+        <p>XX-Large Number: {{print_order.xx_large_number}}</p>
+        <input name="xx_large_number" type="number" min="0" value = {{print_order.xx_large_number}}>
+        <p>XX-Large Add. Charge: {{print_order.xx_large_add_charge}}</p>
+        <input name="xx_large_add_charge" type="text" value = {{print_order.xx_large_add_charge}}>
+
+        <p>Per Unit Base Price: {{print_order.per_unit_base_price}}</p>
+        <input name="per_unit_base_price" type="text" value = {{print_order.per_unit_base_price}}>
+        <p>Color Charge: {{print_order.color_charge}}</p>
+        <input name="color_charge" type="text" value = {{print_order.color_charge}}>
+        <p>Total Blank Price: {{print_order.total_blank_price}}</p>
+        <input name="total_blank_price" type="text" value = {{print_order.total_blank_price}}>
+        <p>Location Size: {{print_order.location_size}}</p>
+        <input name="location_size" type="text" value = {{print_order.location_size}}>
+        <p># Colors Charge: {{print_order.num_colors_charge}}</p>
+        <input name="num_colors_charge" type="text" value = {{print_order.num_colors_charge}}>
+        <p>Color List: {{print_order.color_list}}</p>
+        <input name="color_list" type="text" value = {{print_order.color_list}}>
+        <p>Total: {{print_order.total}}</p>
+        <input name="total" type="text" value = {{print_order.total}}>
         <br>
         <button type="submit">Done</button>
     </form>
