--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,11 @@
 {% include "header.html" %}
 
 <!-- CONTENT START-->
-<div class=container>
+<div class="container" style="margin:100px">
     <main>
-        <p1>CERULEAN BEE</br></p1>
-        <p2>CPSC531 PROJECT</br></p2>
-        <p3>Gordon Huynh and Timothy Jan</p3>
+        <h1 class="display-1">CERULEAN BEE</h1>
+        <h2 class="display-3">CPSC531 PROJECT</br></h2>
+        <h3 class="display-4">Gordon Huynh, Timothy Jan</br></h3>
     </main>
 </div>
 
