--- a/templates/header.html
+++ b/templates/header.html
@@ -8,17 +8,16 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
-        <!-- Bootstrap CSS -->
+      
+        <!-- CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
         <title>Cerulean Bee</title>
     </head>
     
     <body>
     
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#">Cerulean Bee</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -33,10 +32,10 @@
                             <a class="nav-link" href="{{ url_for('artwork_home') }}">Artwork Orders</a>
                         </li>
                         <li class="nav-item show">
-                            <a class="nav-link" href="{{ url_for('employee_work_log_home') }}">Employee Work Logs</a>
+                            <a class="nav-link" href="{{ url_for('print_order_home') }}">Print Orders</a>
                         </li>
                         <li class="nav-item show">
-                            <a class="nav-link" href="{{ url_for('print_order_home') }}">Print Orders</a>
+                            <a class="nav-link" href="{{ url_for('employee_work_log_home') }}">Employee Work Logs</a>
                         </li>
                     </ul>
                 </div>
