--- a/templates/employee_work_log_home.html
+++ b/templates/employee_work_log_home.html
@@ -3,30 +3,54 @@
 {% include "header.html" %}
 
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Cerulean Bee</title>
-</head>
-<body>
-<h1>Employee Work Logs</h1>
-    {% if all_employee_work_logs == [] %}
-    <p>Employee Work Logs are empty</p>
-    {% endif%}
-    <ul>
-        {% for employee_work_log in all_employee_work_logs %}
-        <li>
-            Employee: {{ employee_work_log.employee }} Phone: {{ employee_work_log.phone }} Full/Part Time: {{ employee_work_log.full_part_time }}<br>
-            Date: {{ employee_work_log.date }} Start Time: {{ employee_work_log.start_time }}<br>
-            Project: {{ employee_work_log.project }} Art Item: {{ employee_work_log.art_item }}<br>
-            Task: {{ employee_work_log.task }} End Time: {{ employee_work_log.end_time }}<br>
-            <a href="{{ url_for('edit_employee_work_log', id=employee_work_log.id) }}">Edit</a>
-            <a href="{{ url_for('delete_employee_work_log', id=employee_work_log.id) }}">Delete</a>
-        </li>
-        {% endfor %}
-    </ul>
-    
-<a href="{{ url_for('add_employee_work_log') }}">Add Employee Work Log</a>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Cerulean Bee</title>
+    </head>
+
+    <body>
+        <h1 style="margin:60px 0px 10px 30px">Employee Work Logs</h1>
+        
+        {% if all_employee_work_logs == [] %}
+        <p>Employee Work Logs are empty</p>
+        {% endif%}
+        <table class="table table-bordered table-hover table-responsive">
+            <thead>
+                <tr>
+                    <th>Employee</th>
+                    <th>Phone</th>
+                    <th>Full/Part Time</th>
+                    <th>Date</th>
+                    <th>Start Time</th>
+                    <th>End Time</th>
+                    <th>Project</th>
+                    <th>Art Item</th>
+                    <th>Task</th>
+                    <th><a href="{{ url_for('add_employee_work_log') }}" class="btn btn-success" role="button">Add Employee Work Log</a></th>
+                </tr>
+            </thead>
+            
+            <tbody>
+                {% for employee_work_log in all_employee_work_logs %}
+                    <tr>
+                        <td>{{ employee_work_log.employee }}</td>
+                        <td>{{ employee_work_log.phone }}</td>
+                        <td>{{ employee_work_log.full_part_time }}</td>
+                        <td>{{ employee_work_log.date }}</td>
+                        <td>{{ employee_work_log.start_time }}</td>
+                        <td>{{ employee_work_log.end_time }}</td>
+                        <td>{{ employee_work_log.project }}</td>
+                        <td>{{ employee_work_log.art_item }}</td>
+                        <td>{{ employee_work_log.task }}</td>
+                        <td>
+                            <a href="{{ url_for('edit_employee_work_log', id=employee_work_log.id) }}" class="btn btn-warning" role="button">Edit</a>
+                            <a href="{{ url_for('delete_employee_work_log', id=employee_work_log.id) }}" class="btn btn-danger" role="button">Delete</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </body>
 </html>
 
 {% include "footer.html" %}
