--- a/templates/print_order_home.html
+++ b/templates/print_order_home.html
@@ -3,42 +3,114 @@
 {% include "header.html" %}
 
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Cerulean Bee</title>
-</head>
-<body>
-<h1>Print Orders</h1>
+    <head>
+        <meta charset="UTF-8">
+        <title>Cerulean Bee</title>
+    </head>
+    <body>
+
+    <h1 style="margin:60px 0px 10px 30px">Print Orders</h1>
+    
     {% if all_print_orders == [] %}
     <p>Print Orders are empty</p>
     {% endif%}
-    <ul>
-        {% for print_order in all_print_orders %}
-        <li>
-            Customer: {{ print_order.customer }} Contact: {{ print_order.contact }} Phone: {{ print_order.phone }} email: {{ print_order.email }}<br>
-            Setup Charge: {{ print_order.setup_charge }} Deposit: {{ print_order.deposit }} Discount: {{ print_order.discount }} Total Cost: {{ print_order.total_cost }}<br>
-            Order Date: {{ print_order.order_date }} Art/Slide Date: {{ print_order.art_slide_date }} Due Date: {{ print_order.due_date }} Apparel Date: {{ print_order.apparel_date }}<br>
-            Art/Film Date: {{ print_order.art_film_date }} Print Date: {{ print_order.print_date }} Date Delivered: {{ print_order.date_delivered }}<br>
-            Base Color: {{ print_order.base_color }} Vendor: {{ print_order.vendor }}<br>
 
-            X-Small: {{ print_order.x_small_number }} X-Small Add. Charge: {{ print_order.x_small_add_charge }}<br>
-            Small: {{ print_order.small_number }} Small Add. Charge: {{ print_order.small_add_charge }}<br>
-            Medium: {{ print_order.medium_number }} Medium Add. Charge: {{ print_order.medium_add_charge }}<br>
-            Large: {{ print_order.large_number }} Large Add. Charge: {{ print_order.large_add_charge }}<br>
-            X-Large: {{ print_order.x_large_number }} X-Large Add. Charge: {{ print_order.x_large_add_charge }}<br>
-            XX-Large: {{ print_order.xx_large_number }} XX-Large Add. Charge: {{ print_order.xx_large_add_charge }}<br>
+        <table class="table table-bordered table-hover table-responsive">
+            <thead>
+                <tr>
+                    <th>Customer</th>
+                    <th>Contact</th>
+                    <th>Phone</th>
+                    <th>Email</th>
+                    <th>Set-up Charge</th>
+                    <th>Deposit</th>
+                    <th>Discount</th>
+                    <th>Total Cost</th>
+                    <th>Order Date</th>
+                    <th>Art/Slide Date</th>
+                    <th>Due Date</th>
+                    <th>Apparel Date</th>
+                    <th>Art/Film Date</th>
+                    <th>Print Date</th>
+                    <th>Date Delivered</th>
+                    <th>Base Color</th>
+                    <th>Vendor</th>
 
-            Per Unit Base Price: {{ print_order.per_unit_base_price }} Color Charge: {{ print_order.color_charge }} Total Blank Price: {{print_order.total_blank_price}}<br>
-            Location Size: {{ print_order.location_size }} # Colors Charge: {{ print_order.num_colors_charge }} Color List: {{print_order.color_list}} Total: {{print_order.total}}<br>
+                    <th>X-Small</th>
+                    <th>X-Small Add. Charge</th>
+                    <th>Small</th>
+                    <th>Small Add. Charge</th>
+                    <th>Medium</th>
+                    <th>Medium Add. Charge</th>
+                    <th>Large</th>
+                    <th>Large Add. Charge</th>
+                    <th>X-Large</th>
+                    <th>X-Large Add. Charge</th>
+                    <th>XX-Large</th>
+                    <th>XX-Large Add. Charge</th>
 
-            <a href="{{ url_for('edit_print_order', id=print_order.id) }}">Edit</a>
-            <a href="{{ url_for('delete_print_order', id=print_order.id) }}">Delete</a>
-        </li>
-        {% endfor %}
-    </ul>
-    
-<a href="{{ url_for('add_print_order') }}">Add Print Order</a>
-</body>
+                    <th>Per Unit Base Price</th>
+                    <th>Color Charge</th>
+                    <th>Total Blank Price</th>
+                    <th>Location Size</th>
+                    <th># of Colors Charge</th>
+                    <th>Color List</th>
+                    <th>Total</th>
+                    <th><a href="{{ url_for('add_print_order') }}" class="btn btn-success" role="button">Add Print Order</a></th>
+                </tr>
+            </thead>
+            
+            <tbody>
+                {% for print_order in all_print_orders %}
+                    <tr>                   
+                        <td>{{ print_order.customer }}</td>
+                        <td>{{ print_order.contact }}</td>
+                        <td>{{ print_order.phone }}</td>
+                        <td>{{ print_order.email }}</td>
+                        <td>{{ print_order.setup_charge }}</td>
+                        <td>{{ print_order.deposit }}</td>
+                        <td>{{ print_order.discount }}</td>
+                        <td>{{ print_order.total_cost }}</td>
+                        <td>{{ print_order.order_date }}</td>
+                        <td>{{ print_order.art_slide_date }}</td>
+                        <td>{{ print_order.due_date }}</td>
+                        <td>{{ print_order.apparel_date }}</td>
+                        <td>{{ print_order.art_film_date }}</td>
+                        <td>{{ print_order.print_date }}</td>
+                        <td>{{ print_order.date_delivered }}</td>
+                        <td>{{ print_order.base_color }}</td>
+                        <td>{{ print_order.vendor }}</td>
+
+                        <td>{{ print_order.x_small_number }}</td>
+                        <td>{{ print_order.x_small_add_charge }}</td>
+                        <td>{{ print_order.small_number }}</td>
+                        <td>{{ print_order.small_add_charge }}</td>
+                        <td>{{ print_order.medium_number }}</td>
+                        <td>{{ print_order.medium_add_charge }}</td>
+                        <td>{{ print_order.large_number }}</td>
+                        <td>{{ print_order.large_add_charge }}</td>
+                        <td>{{ print_order.x_large_number }}</td>
+                        <td>{{ print_order.x_large_add_charge }}</td>
+                        <td>{{ print_order.xx_large_number }}</td>
+                        <td>{{ print_order.xx_large_add_charge }}</td>
+
+                        <td>{{ print_order.per_unit_base_price }}</td>
+                        <td>{{ print_order.color_charge }}</td>
+                        <td>{{print_order.total_blank_price}}</td>
+                        <td>{{ print_order.location_size }}</td>
+                        <td>{{ print_order.num_colors_charge }}</td>
+                        <td>{{print_order.color_list}}</td>
+                        <td>{{print_order.total}}</td>
+
+                        <td>
+                            <a href="{{ url_for('edit_print_order', id=print_order.id) }}" class="btn btn-warning" role="button">Edit</a>
+                            <a href="{{ url_for('delete_print_order', id=print_order.id) }}" class="btn btn-danger" role="button">Delete</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </body>
 </html>
 
 {% include "footer.html" %}
